force-app/main/default/objects/Payment_Plan_Milestones__c/Payment_Plan_Milestones__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Milestones</label>
    <nameField>
        <displayFormat>PPM-{000000}</displayFormat>
        <label>Payment Plan Milestones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>