force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Agreement_Value_Percentage_Plan__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Percentage_Plan__c</fullName>
    <label>Agreement Value Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>