force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Charge10Value__c.field-meta.xml
<CustomField>
    <fullName>Charge10Value__c</fullName>
    <label>Charge 10 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>