force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Charge11Name__c.field-meta.xml
<CustomField>
    <fullName>Charge11Name__c</fullName>
    <label>Charge 11 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>