force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Charge12Name__c.field-meta.xml
<CustomField>
    <fullName>Charge12Name__c</fullName>
    <label>Charge 12 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>