force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Charge12Type__c.field-meta.xml
<CustomField>
    <fullName>Charge12Type__c</fullName>
    <label>Charge 12 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>