force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Charge_16_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Charge_16_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge 16 Lookup</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Payment Plan Milestones (Charge 16 Lookup)</relationshipLabel>
    <relationshipName>Payment_Plan_Milestones24vB</relationshipName>
    <type>Lookup</type>
</CustomField>