force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Milestone_Name_Formula_For_PS__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name_Formula_For_PS__c</fullName>
    <formula>Text(Number_Of_Days_Plan__c) + &quot; &quot;+Text(Time_Period__c)+&quot; &quot; +Text(Milestone_Name_Picklist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Name Formula For PS</label>
    <type>Text</type>
</CustomField>