force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Milestone_Name_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name_Picklist__c</fullName>
    <label>Milestone Name Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;&lt;Construction Stage Name&gt;&gt;</fullName>
            </value>
            <value>
                <fullName>from booking date</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>On Booking date</fullName>
            </value>
            <value>
                <fullName>On Handover</fullName>
            </value>
            <value>
                <fullName>Final Installment</fullName>
            </value>
            <value>
                <fullName>Sixth Installment</fullName>
            </value>
            <value>
                <fullName>Third Installment</fullName>
            </value>
            <value>
                <fullName>Fourth Installment</fullName>
            </value>
            <value>
                <fullName>First Installment</fullName>
            </value>
            <value>
                <fullName>Fifth Installment</fullName>
            </value>
            <value>
                <fullName>Bookin Amount</fullName>
                <label>Booking Amount</label>
            </value>
            <value>
                <fullName>Second Installment</fullName>
            </value>
            <value>
                <fullName>On Completion</fullName>
            </value>
            <value>
                <fullName>6 Months from Booking Date</fullName>
                <label>6 Months from Completion</label>
            </value>
            <value>
                <fullName>12 Months from Booking Date</fullName>
                <label>12 Months from Completion</label>
            </value>
            <value>
                <fullName>18 Months from Booking Date</fullName>
                <label>18 Months from Completion</label>
            </value>
            <value>
                <fullName>24 Months from Booking Date</fullName>
                <label>24 Months from Completion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>