force-app/main/default/objects/Payment_Plan_Milestones__c/fields/MSEB_Charges_Percentage_Plan__c.field-meta.xml
<CustomField>
    <fullName>MSEB_Charges_Percentage_Plan__c</fullName>
    <label>MSEB Charges Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>