force-app/main/default/objects/Payment_Plan_Milestones__c/fields/MVAT_Percentage_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVAT_Percentage_Plan__c</fullName>
    <label>MVAT Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>