force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Payment_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Milestones</label>
    <referenceTo>Payment_Milestones__c</referenceTo>
    <relationshipLabel>Payment Plan Milestones</relationshipLabel>
    <relationshipName>Payment_Plan_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>