force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Payment_Plan_Code_For_PS__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Code_For_PS__c</fullName>
    <formula>Payment_Plan__r.Tower__r.Cluster__r.Name+ &quot; - &quot;+Payment_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan Code For PS</label>
    <type>Text</type>
</CustomField>