force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Plan_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date Linked</fullName>
            </value>
            <value>
                <fullName>Construction Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>