force-app/main/default/objects/Payment_Plan_Milestones__c/fields/PLC_Temp_For_PS__c.field-meta.xml
<CustomField>
    <fullName>PLC_Temp_For_PS__c</fullName>
    <formula>IF((Charge1Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge2Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge3Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge4Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge5Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge6Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge7Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge8Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge9Name__c = &apos;PLC&apos;) , Charge1Value__c, IF((Charge10Name__c = &apos;PLC&apos;) , Charge10Value__c, 0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Temp For PS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>