force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Project_Construction_Stages__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Stages__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Construction Stages</label>
    <referenceTo>Project_Construction_Stages__c</referenceTo>
    <relationshipLabel>Payment Plan Milestones</relationshipLabel>
    <relationshipName>Payment_Plan_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>