force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Stamp_Duty_Percentage_Plan__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Percentage_Plan__c</fullName>
    <label>Stamp Duty Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>