force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Token_Amount_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Amount Milestone</label>
    <type>Checkbox</type>
</CustomField>