force-app/main/default/objects/Payment_Plan_Milestones__c/validationRules/DeductTokenCheckedtTokenAmtNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>DeductTokenCheckedtTokenAmtNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Deduct_Token__c== true , ( ISBLANK(Token_Amount__c)), false)</errorConditionFormula>
    <errorDisplayField>Token_Amount__c</errorDisplayField>
    <errorMessage>Please enter the token amount to be deducted.</errorMessage>
</ValidationRule>